# django

./: .env  .gitignore  README.md  pyproject.toml
diploma-frontend/frontend/: urls.py
myshop/database/: db.sqlite3
myshop/myauth/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
myshop/myauth/fixtures/: profiles.json  users.json
myshop/myauth/management/commands/: create_users.py
myshop/myauth/migrations/: 0001_initial.py  0002_payment.py
myshop/myshop/: settings.py  urls.py
myshop/shopapp/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
myshop/shopapp/fixtures/: baskets.json  categories.json  product_images.json  products.json  reviews.json  shopapp.json  specifications.json  tags.json
myshop/shopapp/management/commands/: create_baskets.py  create_categories.py  create_orders.py  create_product_images.py  create_product_reviews.py  create_product_specifications.py  create_products.py  create_tags.py  update_products.py
myshop/shopapp/migrations/: 0001_initial.py  0002_category.py  0002_tag.py  0003_product.py  0003_product_productimage.py  0004_productimage.py  0004_specification_review.py  0005_order.py  0005_specification.py  0006_product_limited.py  0006_review.py  0007_basket.py  0008_order.py  0009_payment.py  0010_sale.py  0011_saleimage.py
